--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ body {
     font-family: 'Courier New', Courier, monospace;
     background-color: rgb(39, 39, 39);
     color: white;
+    margin: 20px;
 }
 
 a {
